# delegate-qa

./: .gitignore  Makefile  PLAN.md  README.md  USER_DOC.md  _check_x0000.py  _check_x0000b.py  _inspect_abbrd.py  _inspect_cols.py  _smoke_dual.py  app_config.toml  approved_corrections.json  check_unique.py  components.py  correction_report.md  delegate_edits.json  flagged_patterns.json  fuzzy_search_poc.ipynb  logic.py  main.py  make_parquet.py  merge_dismissals.json  name_prefixes.py  pattern_merge.py  pattern_merge_plan.md  pattern_merge_poc.ipynb  pattern_status.json  pattern_synonyms.json  plan_next.md  profile_app.py  province_order.json  pyproject.toml  scratch.ipynb  sheet.py  show_merge.py  staged_corrections.json  utils.py
pages/: Day_Order.py
tabs/: __init__.py  abbrd_delegate_mapping.json  tab0_overview.py  tab1_alive.py  tab2_patterns.py  tab3_names.py  tab4_timeline.py  tab5_dayorder.py  tab6_management.py  tab7_settings.py  tab8_delegates.py  tab9_merges.py  tab_suggest.py
tests/: test_logic.py
